--- a/views/query.jade
+++ b/views/query.jade
@@ -7,40 +7,40 @@ block content
     h2 Result
     if other
         -var numResults = other.hits.total
-        -var dummy = other
+        -var results = other
         #numResults
         p Number of hits #{numResults}
         p(id="typeNum") Type Number 1
-        pre(id="qArray")= JSON.stringify(dummy.hits.hits[0]._source, null, ' ')
+        pre(id="qArray")= JSON.stringify(results.hits.hits[0]._source, null, ' ')
     else
         p No Matches
     div.buttons
-        input(type="button" value="Prev" id="prevButton" onclick="prev('#{dummy}')")
-        input(type="button" value="Next" id="nextButton" onclick="next('#{dummy}')")
+        input(type="button" value="Prev" id="prevButton" onclick="prev('#{results}')")
+        input(type="button" value="Next" id="nextButton" onclick="next('#{results}')")
         br
         br
         a(href='/') Search again
     script.
         var index = 0;
-        function next(dummy) {
+        function next(results) {
             index++;
-            var dummy = !{JSON.stringify(dummy)};
-            console.log(dummy.hits.total);
-            if (index >= dummy.hits.total) {
+            var results = !{JSON.stringify(results)};
+            console.log(results.hits.total);
+            if (index >= results.hits.total) {
                 document.getElementById('qArray').innerHTML = '<div><p class="warning">No more results</p></div>'
                 document.getElementById('typeNum').innerHTML = '';
-                index = dummy.hits.total;
+                index = results.hits.total;
                 return false;
             }
 
-            var html = '<pre>' + JSON.stringify(dummy.hits.hits[index]._source, null, ' ') + '</pre>';
+            var html = '<pre>' + JSON.stringify(results.hits.hits[index]._source, null, ' ') + '</pre>';
             document.getElementById('qArray').innerHTML = html;
             document.getElementById('typeNum').innerHTML = '<p>Type Number ' + (index+1) +  '</p>';
         }
 
-        function prev(dummy) {
+        function prev(results) {
             index = index - 1;
-            var dummy = !{JSON.stringify(dummy)};
+            var results = !{JSON.stringify(results)};
             if (index <= -1) {
                 document.getElementById('qArray').innerHTML = '<div><p class="warning">No more results</p></div>'
                 document.getElementById('typeNum').innerHTML = '';
@@ -48,7 +48,7 @@ block content
                 return false;
             }
 
-            var html = '<pre>' + JSON.stringify(dummy.hits.hits[index]._source, null, ' ') + '</pre>';
+            var html = '<pre>' + JSON.stringify(results.hits.hits[index]._source, null, ' ') + '</pre>';
             document.getElementById('qArray').innerHTML = html;
             document.getElementById('typeNum').innerHTML = '<p>Type Number ' + (index+1) +  '</p>';
         }
